Fixes overlap issue

--- a/src/components/Legend.module.css
+++ b/src/components/Legend.module.css
@@ -7,7 +7,7 @@
   padding: 10px 16px;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 0 auto 16px;
+  margin: 24px auto 16px;
   width: fit-content;
 }
 
