--- a/src/components/OpportunitySearch.module.css
+++ b/src/components/OpportunitySearch.module.css
@@ -1,6 +1,7 @@
 .wrapper {
   position: relative;
   width: 100%;
+  margin-top: 0;
   font-family: inherit;
   z-index: 15;
 }
